resource/style/style.css
/* ... */
.container-form-contact form button:hover {
  color: #fff;
  background-color: #000;
  transform: translateY(-3px);
  -webkit-box-shadow: 6px 6px 1px 0px rgba(0, 0, 0, 0.75);
  -moz-box-shadow: 6px 6px 1px 0px rgba(0, 0, 0, 0.75);
  box-shadow: 6px 6px 1px 0px rgba(148, 199, 197, 0.851);
  scale: 1.1;
}

footer {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 20px;
  padding: 20px;
  background-color: #1f1f1f87;
}

footer .copyright {
  font-family: "Poppins", sans-serif;
  color: #fffffe;
}

.social-med {
  display: flex;
  justify-content: space-around;
  align-items: center;
  gap: 10px;
}

.social-med .border-social-med {
  padding: 5px;
  width: 50px;
  height: 35px;
  text-align: center;
  background: rgba(255, 255, 255, 0.1);
  box-shadow: 0 8px 32px 0 rgba(6, 7, 15, 0.37);
  backdrop-filter: blur(2px);
  -webkit-backdrop-filter: blur(2px);
  border-radius: 20px;
  border: 1px solid rgba(255, 255, 255, 0.18);
}

.social-med .border-social-med:hover {
  /* background-color: #fff; */
  border: none;
}

.social-med .border-social-med a {
  color: #fff;
}

/* media query phone */
@media screen and (max-width: 480px) {
  main {
    justify-content: center;
    align-items: center;
    gap: 1.5rem;
  }
  nav.nav {
    display: none;
  }

  body {
    gap: 0;
  }

  nav.side {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 40px;
    height: 90vh;
    position: fixed;
    top: 1rem;
    left: 100vw;
    /* border: 1px solid; */
  }

  nav.side ul#navbar-side {
    display: flex;
    flex-direction: column;
    position: fixed;
    align-items: center;
    justify-content: center;
    list-style-type: none;
    gap: 10px;
    /* border: 1px solid; */
  }

  nav.side ul#navbar-side a {
    text-decoration: none;
  }

  nav ul#navbar-side a li span {
    text-decoration: none;
    width: 20px;
    /* border: 1px solid; */
  }

  .home-section {
    height: 80vh;
    justify-content: center;
    align-items: center;
    padding-top: 4rem;
    padding-bottom: 0;
    /* border: 1px solid; */
  }

  .container-home {
    height: 60vh;
    /* border: 1px solid; */
  }

  .container-home h3,
  .container-about h2,
  .container-project h2 {
    font-size: 90%;
  }

  .container-home p,
  .container-about p {
    width: 70vw;
    font-size: 70%;
    text-align: justify;
  }

  .button-home-section {
    flex-direction: column;
    align-items: center;
    width: 100px;
    /* border: 1px solid; */
  }

  .container-home .button-home-section button.button-linked-in {
    width: 100px;
    font-size: 60%;
  }

  .container-home .button-home-section button.button-CV {
    width: 100px;
    font-size: 60%;
  }

  .container-home .logo-social {
    align-items: center;
    justify-content: center;
    gap: 10px;
    width: 60%;
    /* border: 1px solid; */
  }

  .container-home .logo-social a .border-logo {
    width: 70%;
    /* border: 1px solid; */
  }

  .list-project-container ul li.project-list {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 80%;
    border: 1px solid;
  }

  .wrapper-project {
    flex-direction: column;
    width: 20em;
    height: 30vh;
    padding: 10px;
    /* border: 1px solid; */
  }

  .wrapper-project .info-wrapper {
    display: flex;
    flex-direction: column;
    gap: 10px;
  }

  .wrapper-project h4 {
    text-align: center;
  }

  .list-skill-container {
    width: 84vw;
    /* border: 1px solid; */
  }

  .list-certification-container {
    width: 80vw;
    /* border: 1px solid; */
  }

  .list-certification-container ul li {
    width: 50em;
    padding: 10px;
    /* border: 1px solid; */
  }

  .info-wrapper h4 {
    font-size: 12px;
  }

  .info-wrapper p {
    font-size: 10px;
  }
}
/* media query phone */

